--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </div>
 
         <div class="toggle_btn open">
-            <!-- <img src="./image/menu-bars.png" alt="Menú"> -->
             <i class="fa-solid fa-bars"></i>
         </div>
 
@@ -43,6 +42,12 @@
         <div class="name-Container">
             <h1>PEDRO CAMPODONICO</h1>
             <h2>PROGRAMADOR WEB</h2>
+        </div>
+
+        <div class="container-scroll-icon">
+            <div class="scroll-icon ex-1">
+                <span class="wheel"></span>
+            </div>    
         </div>
 
     </section>
