--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 HOLA
             </h1>
             <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus repudiandae eos veniam quos maxime? Deserunt harum alias exercitationem ex distinctio non eum quisquam repudiandae laborum quibusdam, ipsam perferendis est dolorum?
+                Soy Pedro Campodonico. Soy un apasionado desarrollador web front-end con conocimientos en HTML, CSS y JavaScript. Me encanta esta carrera porque me permite dar vida a mis ideas y expresar mi creatividad al mostrarlas al mundo a través de hermosas y funcionales interfaces. Disfruto especialmente trabajar en equipo, colaborar con otros desarrolladores y aprender de sus perspectivas únicas. Mi habilidad para resolver problemas me impulsa a enfrentar desafíos técnicos y encontrar soluciones eficientes. Estoy entusiasmado por seguir aprendiendo y creciendo en el campo del desarrollo web y aprovechar las últimas tecnologías para crear experiencias web memorables y atractivas. <br> 
+                Puedes encontrar mis certificaciones académicas <span><a href="">aquí</a></span>. 
             </p>
         </div>
     </section>
@@ -113,8 +114,8 @@
                         <p>Portafolio</p>
                     </a>
                     <div class="carousel-element">
-                        <img src="./image/foto1.png" alt="proyecto1">
-                        <p>Portafolio</p>
+                        <img src="./image/foto2.png" alt="proyecto2">
+                        <p>Mokepon</p>
                     </div>
                     <div class="carousel-element">
                         <img src="./image/foto1.png" alt="proyecto1">
