Add screenshots 2,3,4,5 and image profile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="container-image-profile">
             <div>
                 <div>
-                    <!-- foto -->
+                    <img class="image-profile" src="./image/profile.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
                 HOLA
             </h1>
             <p>
-                Soy Pedro Campodonico. Soy un apasionado desarrollador web front-end con conocimientos en HTML, CSS y JavaScript. Me encanta esta carrera porque me permite dar vida a mis ideas y expresar mi creatividad al mostrarlas al mundo a través de hermosas y funcionales interfaces. Disfruto especialmente trabajar en equipo, colaborar con otros desarrolladores y aprender de sus perspectivas únicas. Mi habilidad para resolver problemas me impulsa a enfrentar desafíos técnicos y encontrar soluciones eficientes. Estoy entusiasmado por seguir aprendiendo y creciendo en el campo del desarrollo web y aprovechar las últimas tecnologías para crear experiencias web memorables y atractivas. <br> 
+                Soy Pedro Campodonico, un apasionado desarrollador web front-end con conocimientos en HTML, CSS y JavaScript. Me encanta dar vida a mis ideas y expresar mi creatividad a través de hermosas interfaces funcionales. Disfruto colaborar en equipo, aprender de otros desarrolladores y resolver problemas técnicos. Estoy emocionado por seguir aprendiendo y creciendo en el campo del desarrollo web, aprovechando las últimas tecnologías para crear experiencias web memorables y atractivas. <br> 
                 Puedes encontrar mis certificaciones académicas <span><a href="">aquí</a></span>. 
             </p>
         </div>
