--- a/index.html
+++ b/index.html
@@ -113,30 +113,22 @@
                         <img src="./image/foto1.png" alt="proyecto1">
                         <p>Portafolio</p>
                     </a>
-                    <div class="carousel-element">
+
+                    <a href="https://github.com/PedroCampodonico/Mokepon-Pedro" target="_blank" class="carousel-element">
                         <img src="./image/foto2.png" alt="proyecto2">
                         <p>Mokepon</p>
-                    </div>
-                    <div class="carousel-element">
-                        <img src="./image/foto1.png" alt="proyecto1">
-                        <p>Portafolio</p>
-                    </div>
-                    <div class="carousel-element">
-                        <img src="./image/foto1.png" alt="proyecto1">
-                        <p>Portafolio</p>
-                    </div>
-                    <div class="carousel-element">
-                        <img src="./image/foto1.png" alt="proyecto1">
-                        <p>Portafolio</p>
-                    </div>
-                    <div class="carousel-element">
-                        <img src="./image/foto1.png" alt="proyecto1">
-                        <p>Portafolio</p>
-                    </div>
-                    <div class="carousel-element">
-                        <img src="./image/foto1.png" alt="proyecto1">
-                        <p>Portafolio</p>
-                    </div>
+                    </a>
+
+                    <a href="https://github.com/PedroCampodonico/InterfazPinterest" target="_blank" class="carousel-element">
+                        <img src="./image/foto3.png" alt="proyecto3">
+                        <p>Interfaz-Pinterest</p>
+                    </a>
+
+                    <a href="https://github.com/PedroCampodonico/hyperblog" target="_blank" class="carousel-element">
+                        <img src="./image/foto4.png" alt="proyecto4">
+                        <p>Hiperblog</p>
+                    </a>
+
                 </div>
 
                 <button aria-label="Siguiente" class="carousel-siguiente">
@@ -209,8 +201,8 @@
         <div class="container-social-networks">
             <h1>Contacto</h1>
             <ul>
-                <li><a href=""><img src="./image/github.png" alt=""></a></li>
-                <li><a href=""><img src="./image/linkedin.png" alt=""></a></li>
+                <li><a href="https://github.com/PedroCampodonico" target="_blank"><img src="./image/github.png" alt=""></a></li>
+                <li><a href="https://www.linkedin.com/in/pedro-campodonico-23a8a8153/" target="_blank"><img src="./image/linkedin.png" alt=""></a></li>
             </ul>
         </div>
         <div class="container-contact">
@@ -233,8 +225,8 @@
         <div class="footer-container">
           <p class="footer-description">Explora mi trabajo y descubre mi pasión por el diseño.</p>
           <ul class="footer-social-icons">
-            <li><a href="#" class="social-icon"><img src="./image/github.png" alt=""></a></li>
-            <li><a href="#" class="social-icon"><img src="./image/linkedin.png" alt=""></i></a></li>
+            <li><a href="https://github.com/PedroCampodonico" target="_blank" class="social-icon"><img src="./image/github.png" alt=""></a></li>
+            <li><a href="https://www.linkedin.com/in/pedro-campodonico-23a8a8153/"  target="_blank" class="social-icon"><img src="./image/linkedin.png" alt=""></i></a></li>
           </ul>
           <p class="footer-copy">&copy; Derechos de autor © 2023. PedroCampodonico.</p>
         </div>
